# dued

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  artefactos.py  codecov.yml  requisitos-artefactos.py.txt  requisitos-desarrollo.txt  setup.cfg  setup.py  tox.ini
appveyor/: install.ps1
dued/: __init__.py  __main__.py  artefactos.py  cargador.py  centinelas.py  coleccion.py  config.py  contexto.py  corredores.py  ejecutor.py  entorno.py  excepciones.py  principal.py  programa.py  terminales.py  util.py
dued/analizador/: __init__.py  analizador.py  argumento.py  contexto.py
dued/completado/: bash.completado  completar.py  fish.completado  zsh.completado
integracion/: _explicito.py  _util.py  artefactos.py  contexto.py  corredores.py  main.py
integracion/_soporte/: analizando.py  anidado_o_canalizado.py  err.py  ocupadoafull.py  regresion.py  responder_ambos.py  responder_base.py  responder_falla.py  tree.out
pruebas/: _util.py  analizador_analizador.py  analizador_arg.py  analizador_contexto.py  artefacto.py  cargador.py  centinelas.py  cli.py  coleccion.py  completado.py  concurrencia.py  config.py  confprueba.py  contexto.py  corredores.py  ejecutor.py  fusionar_dics.py  init.py  programa.py  terminales.py  util.py
pruebas/_soporte/: alias_ordenado.py  arbol.json  artefactos.py  autoimpresion.py  contextualizado.py  decorador_multi_default.py  decoradores.py  depuraciones.py  ejecutor_personalizado.py  foo.py  hangar.py  integracion.py  lista_profunda_hng.py  lista_simple_hng.py  nombre_de_subcol_afact.py  profundo_primero.py  textdocs.py  (+5 more)
(+27 files in other folders)
