[flake8]
exclude = dued/vendor,sites,.git,build,dist,alt_env,appveyor
ignore = E124,E125,E128,E261,E301,E302,E303,E306,W503,E731
max-line-length = 79

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = pruebas
python_files = *
filterwarnings =
    once::Warning
    ignore::DeprecationWarning
